--- a/src/Game/Header/Restart/styles.module.css
+++ b/src/Game/Header/Restart/styles.module.css
@@ -19,8 +19,49 @@
   width: 20px;
   object-fit: contain;
   transform: rotate(0deg);
+  transition: all 0.5s linear;
 }
 
 .container:hover .icon {
   transform: rotate(360deg);
+}
+
+.overlay {
+  position: fixed;
+  z-index: var(--closest);
+  top: 0px;
+  left: 0px;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+  display: none;
+  align-items: center;
+}
+
+.dialog {
+  transform: scaleY(0);
+  width: 100%;
+  height: 266px;
+  border: none;
+  background: var(--Semi-Dark-Navy);
+  display: grid;
+  grid-template-columns: auto auto;
+  align-content: center;
+  column-gap: 16px;
+  row-gap: 31px;
+}
+
+.title {
+  grid-column: 1/3;
+  color: var(--Silver);
+  text-align: center;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: var(--font);
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
 }
