--- a/src/Game/DisplayWinner/styles.module.css
+++ b/src/Game/DisplayWinner/styles.module.css
@@ -14,7 +14,7 @@
   border: none;
   width: 100%;
   height: 266px;
-  background-color: var(--Semi-Dark-Navy);
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   justify-content: center;
