--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 [data-theme="dark"] {
-  --bg-color: #121212;
+  --bg-color: #1a2a33;
   --text-color: #e0e0e0;
   --primary-color: #bb86fc;
   --secondary-color: #03dac6;
@@ -45,9 +45,30 @@
 
 body {
   min-height: 100vh;
-  background-color: var(--Dark-Navy);
+  background-color: var(--bg-color);
 }
 
 a {
   color: var(--primary-color);
+}
+
+.clean-btn {
+  color: inherit;
+  cursor: pointer;
+  background: 0 0;
+  border: none;
+  padding: 0;
+  font-family: inherit;
+}
+
+.toggleButton_MMFG {
+  -webkit-tap-highlight-color: transparent;
+  width: 100%;
+  height: 100%;
+  transition: background var(--ifm-transition-fast);
+  border-radius: 50%;
+  justify-content: flex-end;
+  align-items: center;
+  display: flex;
+  padding: 10px 10px;
 }
