completed: Completed Grid-Crash

--- a/src/Game/DisplayWinner/styles.module.css
+++ b/src/Game/DisplayWinner/styles.module.css
@@ -14,7 +14,7 @@
   border: none;
   width: 100%;
   height: 266px;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
