--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
 body {
   min-height: 100vh;
   background-color: var(--bg-color);
+  transition: background-color 0.6s linear;
 }
 
 a {
@@ -70,5 +71,5 @@ a {
   justify-content: flex-end;
   align-items: center;
   display: flex;
-  padding: 10px 10px;
+  padding: 10px 20px;
 }
